added connect-4 to project. initial push

--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -14,7 +14,7 @@
     b4.vertical.fieldConstructor()
 }
 
-@main(messages("home.title"), Some(user)) {
+@main_old(messages("home.title"), Some(user)) {
     <div class="user col-md-6 col-md-offset-3">
         <div class="row">
             <hr class="col-md-12" />
