--- a/app/views/changePassword.scala.html
+++ b/app/views/changePassword.scala.html
@@ -10,7 +10,7 @@
 
 @implicitFieldConstructor = @{ b4.vertical.fieldConstructor() }
 
-@main(messages("change.password.title"), Some(user)) {
+@main_old(messages("change.password.title"), Some(user)) {
     <fieldset class="col-md-6 col-md-offset-3">
         <legend>@messages("change.password")</legend>
         @helper.form(action = controllers.routes.ChangePasswordController.submit, Symbol("autocomplete") -> "off") {
