--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -11,7 +11,7 @@
 
 @implicitFieldConstructor = @{ b4.vertical.fieldConstructor() }
 
-@main(messages("sign.in.title")) {
+@main_old(messages("sign.in.title")) {
     <fieldset class="col-md-6 col-md-offset-3">
         <legend>@messages("sign.in.credentials")</legend>
         @helper.form(action = controllers.routes.SignInController.submit()) {
